# ccg-platform

./: .gitattributes  .gitignore  README.md  main.py  manage.py  pyproject.toml
ccg_platform/: asgi.py  settings.py  urls.py  wsgi.py
ccg_platform/templates/: base.html
ccg_platform/templates/account/: account.html  email.html  email_confirm.html  email_verification_required.html  login.html  password_change.html  password_reset.html  signup.html  verification_sent.html
ccg_platform/templates/socialaccount/: connections.html  login.html  signup.html
geoassign/: apps.py  urls.py
geoassign/api/: views.py
geoassign/reference/panthera_onca/: grid_bPon.txt  panthera_onca.84snps.vcf  panthera_onca_loc.txt
geoassign/scat/: pipeline.py
geoassign/utils/: __init__.py  credible_region.py
inference/: adapters.py  decorators.py  forms.py  urls.py  views.py
inference/static/inference/: style.css
inference/templates/inference/: home.html  jaguar_tools.html  view_results.html
tests/: README.md  __init__.py  run_tests.py  test_geoassign_api.py  test_geoassign_models.py
tests/geoassign/scat/: test_pipeline.py
