[project]
name = "ccg-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "cryptography>=45.0.4",
    "django>=5.2.3",
    "django-allauth>=65.9.0",
    "djangorestframework>=3.16.0",
    "numpy>=1.24.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "scipy>=1.10.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "jupyterlab>=4.4.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
]
